scripts/platform/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ext-gateway
  namespace: platform
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: 8080
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: All
  - name: 8081
    protocol: HTTP
    port: 8081
    allowedRoutes:
      namespaces:
        from: All
